[package]
name = "server-picker"
version = "0.1.0"
edition = "2024"
description = "Standalone CS2 server region picker – blocks relay IPs via iptables"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
] }
egui = "0.34"
serde_json = "1.0"

[profile.release]
lto = true
